--- a/features/ryansubmission/package.json
+++ b/features/ryansubmission/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "jiti": "^2.4.2",
+    "react-testing-library": "^8.0.1",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
